--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset = "UTF-8">
     <title>Document</title>
+    <link rel = "stylesheet" href = "css/style.css">
+    <script src="js/script.js"></script>
 </head>
 <body>
-    here
+    test123
     </body>    
     
 </html>
