more work on the contact form

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class = "container"> <!---div - container unit) --->
         <header class = "header">
-            <a class = "link-title" href = "/">Minimalistic Website</a>
+            <a class = "link-title" href = "/">Mikolaj Pankiewicz</a>
         </header>
             
     <nav class="menu"> <!--- a set of navigation links --->
