--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     
     <nav class="menu"> <!--- a set of navigation links -->
         <a href="/">Home</a> &nbsp; &nbsp; &nbsp;
-        <a href="about.html">About us</a> &nbsp; &nbsp; &nbsp;
+        <a href="about.html">About Me</a> &nbsp; &nbsp; &nbsp;
         <a href="contact.html">Contact</a> &nbsp; &nbsp; &nbsp;
         
 
