--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
         <div class="description">
             
             
-        <p>Born and raised in Gdansk, Poland, I'm currently pursuing my Bachelor of Science Degree at Rutgers Univeristy in New Brunswick, New Jersey.
+        <p>Born and raised in Gdansk, Poland, at the age of 19 I have decided to change my surroundings and educate myself in the United States. I'm currently pursuing my Bachelor of Science Degree at Rutgers Univeristy in New Brunswick, New Jersey.
         &nbsp;
         </p>
         <p>
