new resume upload

--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
     <footer>
        <!-- &copy: copyright symbol -->
         &copy; Designed by Miko <a href="http://www.github.com/mik0why"> github</a> &nbsp; <a href="http://www.linkedin.com/in/mikopankiewicz">linkedIn </a>
-        &nbsp; <a href="Resume-November19-pdf.pdf">resume </a>
+        &nbsp; <a href="Resume-Feb20.pdf">resume </a>
         
     </footer>
     
