minor text changes

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
         &nbsp;
         </p>
         <p>
-        I consider myself to be a highly motivated and talented programmer who is always willing to put extra effort into achieving my goals.
+        I consider myself to be a highly talented programmer who is always willing to put extra effort into achieving my goals.
         Some of the technologies I have the most experience with are Java & OOP, Python, as well as web development. I have also worked with Test Automation Tools for the purposes of Software Deployment. I am a huge enthusiast of AI and Data Science, and enjoy spending time learning about them.
         </p>
         <p>
